<resources>
    <string name="app_name">ВИВТ</string>

    <string name="error_connection">При загрузке данных произошла ошибка. Проверьте ваше подключение</string>
    <string name="error_unexpected">Произошла непредвиденная ошибка. Повторите попытку позже</string>
    <string name="error_not_yet_data_semester">Данных за %d семестр ещё нет</string>
    <string name="email_err">Email введен не верно</string>
    <string name="password_short">Пароль слишком короткий</string>
    <string name="fill_field">Заполните это поле</string>

    <string name="notification">Уведомления</string>
    <string name="settings">Настройки</string>
    <string name="btn_auth">Войти</string>
    <string name="logout">Выйти</string>
    <string name="email">Email</string>
    <string name="password">Пароль</string>
    <string name="register">Зарегистрироваться</string>
    <string name="authorization">Авторизация&#8230;</string>

    <string name="btnRefresh">Обновить</string>
    <string name="search">Поиск</string>

    <string name="name_teacher">%s %s %s</string>

    <string name="news">Новости</string>
    <string name="schedule">Расписание</string>
    <string name="teachers">Преподователи</string>
    <string name="brs">БРС</string>
    <string name="more_toolbar">ВИВТ</string>
    <string name="more_menu">Ещё</string>

    <string name="none_ball">-</string>
    <string name="not_ball">Нет оценки</string>
    <string name="ballCP1">КТ1: %s</string>
    <string name="ballCP2">КТ2: %s</string>
    <string name="ballCP3">КТ3: %s</string>
    <string name="ballCP4">КТ4: %s</string>
    <string name="ballMC">Аттестация: %s</string>
    <string name="ballV">Посещаемость: %s</string>
    <string name="ballSum">Всего: %s</string>

    <string name="semester_1">1 семестр</string>
    <string name="semester_2">2 семестр</string>
    <string name="semester_3">3 семестр</string>
    <string name="semester_4">4 семестр</string>
    <string name="semester_5">5 семестр</string>
    <string name="semester_6">6 семестр</string>
    <string name="semester_7">7 семестр</string>
    <string name="semester_8">8 семестр</string>
    <string name="semester_9">9 семестр</string>
    <string name="semester_10">10 семестр</string>
    <string name="semester_11">11 семестр</string>
    <string name="semester_12">12 семестр</string>

    <string name="title_activity_settings">Настройки</string>
    <string name="title_activity_notification">Уведомления</string>

    <string name="header_theme">Тема</string>
    <string name="theme_dark">Тёмная тема</string>

    <!--    <string name="btn_notification">Настроить</string>-->
    <!--    <string name="btn_notification_summary">Настройка каналов оповещений</string>-->

    <string name="header_notification">Уведомления</string>
    <string name="push_change_schedule">Изменение в расписании</string>
    <string name="push_personal_info">Персональная информация</string>
    <string name="push_ads">Объявления</string>
    <string name="push_inform_mailing">Информационная рассылка</string>
    <string name="push_info_attendance">Информация о посещаемости</string>
    <string name="push_other">Другое</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
