<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/header_theme">

        <SwitchPreferenceCompat
            app:key="theme_dark"
            app:title="@string/theme_dark"
            app:defaultValue="false" />

    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/header_notification">

        <SwitchPreferenceCompat
            app:key="1"
            app:title="@string/push_change_schedule"
            app:defaultValue="true" />

        <SwitchPreferenceCompat
            app:key="2"
            app:title="@string/push_personal_info"
            app:defaultValue="true" />

        <SwitchPreferenceCompat
            app:key="3"
            app:title="@string/push_ads"
            app:defaultValue="true" />

        <SwitchPreferenceCompat
            app:key="4"
            app:title="@string/push_inform_mailing"
            app:defaultValue="true" />

        <SwitchPreferenceCompat
            app:key="5"
            app:title="@string/push_info_attendance"
            app:defaultValue="true" />

        <SwitchPreferenceCompat
            app:key="Default"
            app:title="@string/push_other"
            app:defaultValue="true" />

    </PreferenceCategory>

</PreferenceScreen>