<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".application.fragments.BrsFragment">

    <TextView
        android:id="@+id/errorText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:textSize="16sp"
        android:visibility="gone"
        android:layout_gravity="center" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="8dp"
        android:clipToPadding="false"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"/>

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/test"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll|enterAlways" >

            <HorizontalScrollView
                android:id="@+id/scrollView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                app:layout_collapseMode="pin"
                android:scrollbars="none"
                android:background="@color/bgNavigationView"
                android:elevation="4dp"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:requiresFadingEdge="horizontal"
                android:fadingEdgeLength="30dp"
                app:layout_scrollFlags="scroll|enterAlways|snap">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <View
                        android:layout_width="16dp"
                        android:layout_height="match_parent"
                        android:background="@android:color/transparent" />

                    <com.google.android.material.chip.ChipGroup
                        android:id="@+id/chips"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:chipSpacing="8dp"
                        app:singleSelection="true">

                        <com.google.android.material.chip.Chip
                            android:id="@+id/chip1"
                            style="@style/AppTheme.Chip"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/semester_1" />

                        <com.google.android.material.chip.Chip
                            android:id="@+id/chip2"
                            style="@style/AppTheme.Chip"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/semester_2" />

                        <com.google.android.material.chip.Chip
                            android:id="@+id/chip3"
                            style="@style/AppTheme.Chip"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/semester_3" />

                        <com.google.android.material.chip.Chip
                            android:id="@+id/chip4"
                            style="@style/AppTheme.Chip"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/semester_4" />

                        <com.google.android.material.chip.Chip
                            android:id="@+id/chip5"
                            style="@style/AppTheme.Chip"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/semester_5" />

                        <com.google.android.material.chip.Chip
                            android:id="@+id/chip6"
                            style="@style/AppTheme.Chip"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/semester_6" />

                        <com.google.android.material.chip.Chip
                            android:id="@+id/chip7"
                            style="@style/AppTheme.Chip"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/semester_7" />

                        <com.google.android.material.chip.Chip
                            android:id="@+id/chip8"
                            style="@style/AppTheme.Chip"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/semester_8" />

                        <com.google.android.material.chip.Chip
                            android:id="@+id/chip9"
                            style="@style/AppTheme.Chip"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/semester_9" />

                        <com.google.android.material.chip.Chip
                            android:id="@+id/chip10"
                            style="@style/AppTheme.Chip"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/semester_10" />

                        <com.google.android.material.chip.Chip
                            android:id="@+id/chip11"
                            style="@style/AppTheme.Chip"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/semester_11" />

                        <com.google.android.material.chip.Chip
                            android:id="@+id/chip12"
                            style="@style/AppTheme.Chip"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/semester_12" />
                    </com.google.android.material.chip.ChipGroup>

                    <View
                        android:layout_width="16dp"
                        android:layout_height="match_parent"
                        android:background="@android:color/transparent" />

                </LinearLayout>

            </HorizontalScrollView>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:id="@+id/snackBar"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>