<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:animateLayoutChanges="true"
    android:id="@+id/relativeLayout">
    
    <LinearLayout
        android:id="@+id/titleBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        android:orientation="vertical"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:baselineAligned="false"
        android:gravity="center"
        android:layout_alignParentTop="true"
        android:layout_above="@id/input_group">

        <ImageView
            android:src="@drawable/vivt_white"
            android:layout_width="wrap_content"
            android:layout_height="50dp" />

        <!--<TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text="@string/app_name"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="22sp"/>-->

        <com.tomer.fadingtextview.FadingTextView
            android:id="@+id/fadingText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center|fill_vertical"
            android:padding="1sp"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:texts="@array/phrases"
            app:timeout="2500" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/input_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginBottom="50dp"
        android:layout_alignParentBottom="true"
        android:gravity="center">


        <EditText
            android:id="@+id/editEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/login_edit_text_top"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="12dp"
            android:autofillHints="email" />

        <EditText
            android:id="@+id/editPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/login_edit_text_bottom"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="12dp"
            android:autofillHints="password" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnAuth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_auth"
            android:foreground="?android:attr/selectableItemBackground"
            android:text="@string/btn_auth"
            android:textAllCaps="false"
            android:textColor="@color/btnLoginColor"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/signUp_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:padding="10dp"
            android:text="@string/register"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackgroundBorderless"
            android:textAllCaps="true"
            android:textSize="13sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:fontFamily="sans-serif" />


    </LinearLayout>

    <View
        android:id="@+id/snackBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</RelativeLayout>